[package]
name = "rust_game"
version = "0.1.0"
authors = ["Luc Billaud <luc.billaud.pro@gmail.com>"]
edition = "2021"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[dependencies]
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "glow"
] }
egui = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
image = { version = "0.25.2", features = ["jpeg", "png"] }


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
